--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                    <li><a href="" class="btn btn-round btn-default">Source Code</a></li>
+                    <li><a href="" class="btn btn-round btn-default">Ambient Music</a></li>
                </ul>
               
             </div><!-- /.navbar-collapse -->
