--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!--     Font Awesome     -->
     <link href="bootstrap3/css/font-awesome.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+    <link href='assets/css/Grand-Hotel.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <audio autoplay loop><source src="music\Gallery.mp3" type="audio/mp3"></audio>
