--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href='assets/css/Grand-Hotel.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <audio autoplay loop><source src="music\Gallery.mp3" type="audio/mp3"></audio>
+  <audio autoplay loop><source src="music\Taylor Swift - Begin Again (Taylor-'s Version).mp3" type="audio/mp3"></audio>
 <div id="navbar-full">
     <div class="container">
         <nav class="navbar navbar-ct-blue navbar-transparent navbar-fixed-top" role="navigation">
